--- a/src/landing.pug
+++ b/src/landing.pug
@@ -35,13 +35,13 @@ block content
             span een greep uit onze leaders
             +svg('wreath-right')
           .hero__logos.row
-            img(src="images/logo-care.svg", alt="", data-scrollspy="animate__fadeInUpResponse", data-delayTime="3600", data-durationTime="300").col-4.col-md-auto
-            img(src="images/logo-wetlands.svg", alt="", data-scrollspy="animate__fadeInUpResponse", data-delayTime="4000", data-durationTime="300").col-4.col-md-auto
-            img(src="images/logo-women.svg", alt="", data-scrollspy="animate__fadeInUpResponse", data-delayTime="4400", data-durationTime="300").col-4.col-md-auto
-            img(src="images/logo-jef.svg", alt="", data-scrollspy="animate__fadeInUpResponse", data-delayTime="4800", data-durationTime="300").col-3.col-md-auto
-            img(src="images/logo-soh.svg", alt="",, data-scrollspy="animate__fadeInUpResponse", data-delayTime="5200", data-durationTime="300").col-3.col-md-auto
-            img(src="images/logo-rode-kruis.svg", alt="", data-scrollspy="animate__fadeInUpResponse", data-delayTime="5600", data-durationTime="300").col-3.col-md-auto
-            img(src="images/logo-kngf.svg", alt="", data-scrollspy="animate__fadeInUpResponse", data-delayTime="6000", data-durationTime="300").col-3.col-md-auto
+            img(src="images/logo-care.svg", alt="logo care.", data-scrollspy="animate__fadeInUpResponse", data-delayTime="3600", data-durationTime="300").col-4.col-md-auto
+            img(src="images/logo-wetlands.svg", alt=" logo wetlands.", data-scrollspy="animate__fadeInUpResponse", data-delayTime="4000", data-durationTime="300").col-4.col-md-auto
+            img(src="images/logo-women.svg", alt="logo women.", data-scrollspy="animate__fadeInUpResponse", data-delayTime="4400", data-durationTime="300").col-4.col-md-auto
+            img(src="images/logo-jef.svg", alt="logo jeugd educatie fonds.", data-scrollspy="animate__fadeInUpResponse", data-delayTime="4800", data-durationTime="300").col-3.col-md-auto
+            img(src="images/logo-soh.svg", alt="logo fonds slachtofferhulp.",, data-scrollspy="animate__fadeInUpResponse", data-delayTime="5200", data-durationTime="300").col-3.col-md-auto
+            img(src="images/logo-rode-kruis.svg", alt="logo rode kruis.", data-scrollspy="animate__fadeInUpResponse", data-delayTime="5600", data-durationTime="300").col-3.col-md-auto
+            img(src="images/logo-kngf.svg", alt="logo kngf.", data-scrollspy="animate__fadeInUpResponse", data-delayTime="6000", data-durationTime="300").col-3.col-md-auto
   .section.background-muted.magazineBlocks
     .container-lg
       .magazineBlocks__gridWrapper
@@ -49,19 +49,19 @@ block content
         h3.magazineBlocks__titleOne(data-scrollspy="animate__fadeInLeftResponse") En dat levert concrete<span class="scribble">&nbsp;resultaten<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.01 74.54" width="124" height="36" data-scrollspy><path d="M98.1 58.52c-13.56 4.1-27.68 6-41.84 5.65-7.14-.19-14.26-.91-21.3-2.17-6.71-1.19-13.55-2.44-20.3-5.61-3.5-1.62-6.71-3.81-9.49-6.48-1.79-1.5-3.2-3.41-4.09-5.57-.96-2.23-.72-4.8.62-6.82 2.28-2.98 4.98-5.61 8-7.84 2.75-2.17 5.7-4.06 8.82-5.64 12.49-6.35 26.1-7.81 39.55-8.23 7.25-.22 14.5.05 21.71.82 6.7.71 13.77 1.24 20.53 6.01 3.44 2.44 5.83 6.08 6.71 10.2 1.06 4.72.39 9.65-1.89 13.92-1.86 3.35-4.5 6.2-7.69 8.33a45.85 45.85 0 0 1-9.24 4.88 90.75 90.75 0 0 1-41.08 6.86 95.63 95.63 0 0 1-21.1-3.7c-3.43-.97-6.73-2.36-9.82-4.15a30.802 30.802 0 0 1-9.23-8.04A18.47 18.47 0 0 1 3.5 36.9c.89-4.61 3.22-7.25 5.32-9.57a69.06 69.06 0 0 1 16.8-13.59c11.97-6.85 24.8-9.73 37.66-11.81 3.14-.51 6.28-.97 9.43-1.43" style="fill:none;stroke-linecap:round;stroke-miterlimit:10;stroke-width:2px"/></svg></span> op!
         .magazineBlocks__contentOne(data-scrollspy="animate__fadeInDownResponse", data-delayTime="1000")
           .magazineBlocks__imagesGroup
-            img(src="images/magazine-0.webp")
-            img(src="images/magazine-1.webp")
+            img(src="images/magazine-0.webp" alt="magazine.")
+            img(src="images/magazine-1.webp" alt="magazine.")
           .magazineBlocks__descriptionOne
             p Met het <b>Nederlandse Rode Kruis</b> en <b>CARE Nederland</b> wisten we fondsen binnen te halen van de Nationale Postcode Loterij.
         .magazineBlocks__content.magazineBlocks__contentTwo(data-scrollspy="animate__fadeInUpResponse", data-delayTime="1500")
-          img(src="images/magazine-2.webp")
+          img(src="images/magazine-2.webp" alt="magazine.")
           .magazineBlocks__descriptionTwo
             p <b>WO=MEN</b> kreeg via onze ontwerpen toegang tot nieuwe overheidssubsidie.
         .magazineBlocks__content.magazineBlocks__contentThree(data-scrollspy="animate__fadeInDownResponse", data-delayTime="2000")
-          img(src="images/magazine-3.webp")
+          img(src="images/magazine-3.webp" alt="magazine.")
           .magazineBlocks__descriptionThree
             p En met de Building with Nature publicaties won <b>Wetlands International</b> een <b>World Restoration Flagship Award</b> van de Verenigde Naties.
-            img(src="images/word-restoration-flagship.webp")
+            img(src="images/word-restoration-flagship.webp" alt="magazine.")
         h3.magazineBlocks__titleTwo(data-scrollspy="animate__fadeInLeftResponse", data-delayTime="2000") Wat wij voor hun doen, kunnen we ook voor <span class="scribble">&nbsp;jou<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.01 74.54" width="124" height="36" data-scrollspy><path d="M98.1 58.52c-13.56 4.1-27.68 6-41.84 5.65-7.14-.19-14.26-.91-21.3-2.17-6.71-1.19-13.55-2.44-20.3-5.61-3.5-1.62-6.71-3.81-9.49-6.48-1.79-1.5-3.2-3.41-4.09-5.57-.96-2.23-.72-4.8.62-6.82 2.28-2.98 4.98-5.61 8-7.84 2.75-2.17 5.7-4.06 8.82-5.64 12.49-6.35 26.1-7.81 39.55-8.23 7.25-.22 14.5.05 21.71.82 6.7.71 13.77 1.24 20.53 6.01 3.44 2.44 5.83 6.08 6.71 10.2 1.06 4.72.39 9.65-1.89 13.92-1.86 3.35-4.5 6.2-7.69 8.33a45.85 45.85 0 0 1-9.24 4.88 90.75 90.75 0 0 1-41.08 6.86 95.63 95.63 0 0 1-21.1-3.7c-3.43-.97-6.73-2.36-9.82-4.15a30.802 30.802 0 0 1-9.23-8.04A18.47 18.47 0 0 1 3.5 36.9c.89-4.61 3.22-7.25 5.32-9.57a69.06 69.06 0 0 1 16.8-13.59c11.97-6.85 24.8-9.73 37.66-11.81 3.14-.51 6.28-.97 9.43-1.43" style="fill:none;stroke-linecap:round;stroke-miterlimit:10;stroke-width:2px"/></svg></span> doen!
   .section.background-secondary.info
     .container-lg
@@ -77,14 +77,14 @@ block content
             li directe creatieve slagkracht voor jouw project
             li en een eerste stap naar een langdurige samenwerking.
           a(href="#form").button.button--gradient.text-center Claim nu jouw impact voucher!
-        img(src="images/info-1.webp" data-scrollspy="animate__fadeInUpResponse").info__imageTwo
+        img(src="images/info-1.webp" alt="info." data-scrollspy="animate__fadeInUpResponse").info__imageTwo
         .info__faq(data-scrollspy="animate__fadeInDownResponse")
           h3(data-scrollspy="animate__fadeInDown" data-delayTime="900") <span class="scribble">&nbsp;Waarom<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.01 74.54" width="124" height="36" data-scrollspy><path d="M78.2747 44.1242C90.57 43.5094 102.71 41.3593 114.345 37.7358C120.02 36.0611 125.51 33.916 130.743 31.3283C135.183 29.0366 139.343 25.8651 141.019 21.3717C144.687 11.5134 133.254 6.79702 124.705 4.7115C112.454 1.90897 99.8827 0.391832 87.2428 0.190473C63.0556 -0.528672 36.7972 0.381046 14.6639 10.1614C6.25631 13.877 -3.86083 22.4408 1.49601 31.7022C6.03344 39.5445 18.2311 40.8018 26.8683 41.9237C55.1898 45.5622 84.057 43.5246 111.398 35.9571C111.985 35.7929 113.621 35.3051 113.382 34.4997C113.15 33.7254 111.39 33.9795 110.847" style="fill:none;stroke-linecap:round;stroke-miterlimit:10;stroke-width:2px"/></svg></span> kiezen voor Engine?
           ul
             li(data-scrollspy="animate__fadeInRight" data-delayTime="1900") Wij hebben ruim 15 jaar ervaring in het werken met non-profits, stichtingen en organisaties die impact willen maken.
             li(data-scrollspy="animate__fadeInRight" data-delayTime="2400") Bewezen succes in fondsenwerving, campagnes en award-winnende projecten.
             li(data-scrollspy="animate__fadeInRight" data-delayTime="2900") Een compact en betrokken team dat begrijpt dat jouw missie voorop staat.
-        img(src="images/team.jpg", data-scrollspy="animate__fadeInUpResponse").info__imageTree
+        img(src="images/team.jpg", alt="team." data-scrollspy="animate__fadeInUpResponse").info__imageTree
   .section.background-muted.accordions
     .container-lg
       h2 De<span class="scribble">&nbsp;voorwaarden <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.01 74.54" width="124" height="36" data-scrollspy><path d="M98.1 58.52c-13.56 4.1-27.68 6-41.84 5.65-7.14-.19-14.26-.91-21.3-2.17-6.71-1.19-13.55-2.44-20.3-5.61-3.5-1.62-6.71-3.81-9.49-6.48-1.79-1.5-3.2-3.41-4.09-5.57-.96-2.23-.72-4.8.62-6.82 2.28-2.98 4.98-5.61 8-7.84 2.75-2.17 5.7-4.06 8.82-5.64 12.49-6.35 26.1-7.81 39.55-8.23 7.25-.22 14.5.05 21.71.82 6.7.71 13.77 1.24 20.53 6.01 3.44 2.44 5.83 6.08 6.71 10.2 1.06 4.72.39 9.65-1.89 13.92-1.86 3.35-4.5 6.2-7.69 8.33a45.85 45.85 0 0 1-9.24 4.88 90.75 90.75 0 0 1-41.08 6.86 95.63 95.63 0 0 1-21.1-3.7c-3.43-.97-6.73-2.36-9.82-4.15a30.802 30.802 0 0 1-9.23-8.04A18.47 18.47 0 0 1 3.5 36.9c.89-4.61 3.22-7.25 5.32-9.57a69.06 69.06 0 0 1 16.8-13.59c11.97-6.85 24.8-9.73 37.66-11.81 3.14-.51 6.28-.97 9.43-1.43" style="fill:none;stroke-linecap:round;stroke-miterlimit:10;stroke-width:2px"/></svg></span>
@@ -118,5 +118,5 @@ block content
                 button.button.button--gradient.full-width.text-center(type="submit") Verzenden
                   .hero__image.col-5.col-xl-6.offset-xl-2
         .footer
-          img(src="images/hero-form.png").footer__image
+          img(src="images/hero-form.png" alt="footer image.").footer__image
           img(src="images/logo-engine.svg" alt="logo Engine." width="249" height="46").footer__logo
