--- a/src/scss/components-landing/menu-toggle.scss
+++ b/src/scss/components-landing/menu-toggle.scss
@@ -111,3 +111,14 @@
     display: none;
   }
 }
+
+.menu-toggle-open,
+.menu-toggle-close {
+  @include tablet {
+    right: 64px;
+  }
+
+  @include desktop {
+    right: 120px;
+  }
+}
