--- a/src/scss/components-landing/accordions.scss
+++ b/src/scss/components-landing/accordions.scss
@@ -7,6 +7,7 @@
 
   h2 {
     color: rgba(32, 32, 32, 1);
+    font-family: $font-secondary;
     font-size: 18px;
     font-weight: 700;
     line-height: 22px;
