--- a/src/scss/components/accordion.scss
+++ b/src/scss/components/accordion.scss
@@ -43,12 +43,11 @@
   transition-duration: 0.5s;
   max-height: 0;
   font-size: 14px;
-  line-height: 17px;
+  line-height: 1.5;
   margin-top: 10px;
 
   @include tablet {
     font-size: 20px;
-    line-height: 24px;
   }
 }
 
