--- a/src/landing.pug
+++ b/src/landing.pug
@@ -12,10 +12,10 @@ block content
       .row.container-lg
         .hero__image.col-5.col-xl-6.offset-xl-2
           img(src="images/impact.png")
-        .hero__titles.col-7.col-md-8.offset-md-4.col-xl-6.offset-xl-6
+        .hero__titles.col-7.col-md-8.offset-md-4.col-xl-7.offset-xl-5
           h2(data-scrollspy="animate__fadeInLeftResponse") Join the 
             span leaders.
-          p(data-scrollspy="animate__fadeInUpAndOpacity", data-durationTime="3000") Maak het verschil met een sterke visuele boodschap. 
+          p(data-scrollspy="animate__fadeInUpResponse", data-durationTime="500" data-delayTime="3000") Maak het verschil met een sterke visuele boodschap. 
             span Claim nu jouw gratis design 
             |en ervaar wat wij voor jouw organisatie kunnen betekenen.
           h2(data-scrollspy="animate__fadeInRightResponse", data-durationTime="3000") Vergroot je 
@@ -81,9 +81,9 @@ block content
         .info__faq(data-scrollspy="animate__fadeInDownResponse")
           h3(data-scrollspy="animate__fadeInDown" data-delayTime="900") <span class="scribble">&nbsp;Waarom<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.01 74.54" width="124" height="36" data-scrollspy><path d="M78.2747 44.1242C90.57 43.5094 102.71 41.3593 114.345 37.7358C120.02 36.0611 125.51 33.916 130.743 31.3283C135.183 29.0366 139.343 25.8651 141.019 21.3717C144.687 11.5134 133.254 6.79702 124.705 4.7115C112.454 1.90897 99.8827 0.391832 87.2428 0.190473C63.0556 -0.528672 36.7972 0.381046 14.6639 10.1614C6.25631 13.877 -3.86083 22.4408 1.49601 31.7022C6.03344 39.5445 18.2311 40.8018 26.8683 41.9237C55.1898 45.5622 84.057 43.5246 111.398 35.9571C111.985 35.7929 113.621 35.3051 113.382 34.4997C113.15 33.7254 111.39 33.9795 110.847" style="fill:none;stroke-linecap:round;stroke-miterlimit:10;stroke-width:2px"/></svg></span> kiezen voor Engine?
           ul
-            li(data-scrollspy="animate__fadeInRight" data-delayTime="2000" data-durationTime="500") Wij hebben ruim 15 jaar ervaring in het werken met non-profits, stichtingen en organisaties die impact willen maken.
-            li(data-scrollspy="animate__fadeInRight" data-delayTime="2000" data-durationTime="500") Bewezen succes in fondsenwerving, campagnes en award-winnende projecten.
-            li(data-scrollspy="animate__fadeInRight" data-delayTime="2000" data-durationTime="500") Een compact en betrokken team dat begrijpt dat jouw missie voorop staat.
+            li(data-scrollspy="animate__fadeInRight" data-delayTime="1900" data-durationTime="500") Wij hebben ruim 15 jaar ervaring in het werken met non-profits, stichtingen en organisaties die impact willen maken.
+            li(data-scrollspy="animate__fadeInRight" data-delayTime="2400" data-durationTime="500") Bewezen succes in fondsenwerving, campagnes en award-winnende projecten.
+            li(data-scrollspy="animate__fadeInRight" data-delayTime="2900" data-durationTime="500") Een compact en betrokken team dat begrijpt dat jouw missie voorop staat.
         img(src="images/team.jpg", alt="team." data-scrollspy="animate__fadeInUpResponse").info__imageTree
   .section.background-muted.accordions
     .container-lg
