--- a/src/landing.pug
+++ b/src/landing.pug
@@ -97,14 +97,14 @@ block content
           +accordion("Tot wanneer kan ik meedoen?", "Quam voluptate consequatur temporibus dicta quisquam aperiam illo harum alias eligendi adipisci non eum sit odio, beatae iusto ab qui, odit quia recusandae id quo corporis? Hic, porro eaque! Atque, corporis fuga magni neque voluptate deserunt delectus perspiciatis quibusdam quia nulla quis odio consequuntur pariatur nostrum quod mollitia! Odit laborum dolorem iure neque optio vitae amet ex sequi consectetur doloribus deserunt possimus pariatur facilis facere rerum a laudantium molestiae, voluptatum commodi eius omnis, quas ratione. Iure minus voluptas consequatur! Rem debitis numquam atque ducimus ipsam dignissimos rerum dolores hic quas blanditiis. Possimus.")
         div.col-12.col-xl-5.offset-xl-1
           +accordion("Wat krijg ik?", "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptate consequatur temporibus dicta quisquam aperiam illo harum alias eligendi adipisci non eum sit odio, beatae iusto ab qui, odit quia recusandae id quo corporis? Hic, porro eaque! Atque, corporis fuga magni neque voluptate deserunt delectus perspiciatis quibusdam quia nulla quis odio consequuntur pariatur nostrum quod mollitia! Odit laborum dolorem iure neque optio vitae amet ex sequi consectetur doloribus deserunt possimus pariatur facilis facere rerum a laudantium molestiae, voluptatum commodi eius omnis, quas ratione. Iure minus voluptas consequatur! Rem debitis numquam atque ducimus ipsam dignissimos rerum dolores hic quas blanditiis. Possimus.")
-      p.accordions__discription Deze aanbieding is geldig tot 31 december 2025
+      p.accordions__description Deze aanbieding is geldig tot 31 december 2025
   .section.background-secondary.feedback#form
     .container-lg
-      .feedback__wrapper.row
+      .feedback__wrapper
         h2 Ben jij klaar om<br /> het<span class="scribble">&nbsp;verschil<svg width="181" height="53" viewBox="0 0 181 53" fill="none" xmlns="http://www.w3.org/2000/svg" data-scrollspy><path fill="none" d="M60.7168 50.916C78.0519 51.2259 95.7774 49.5133 113.024 48.4042C130.27 47.295 151.172 46.0554 166.821 37.1661C176.456 31.6856 184.298 20.1865 172.818 13.0424C162.598 6.68124 146.239 4.91968 134.298 3.51695C118.897 1.70645 103.354 1.18451 87.8285 1.67383C63.3783 2.45675 35.3441 5.89832 13.2538 16.2393C6.99044 19.1753 1.25938 23.4487 1.50779 30.6091C1.82717 39.3843 12.7747 42.2061 20.635 44.2612C39.1234 49.0729 60.433 50.1168 79.4892 50.965C100.834 51.911 125.409 48.29 145.494 41.5047C154.614 38.422 168.347 32.2402 167.229 21.524C166.111 10.8079 147.108 9.58455 137.971 8.23076C123.457 6.07774 109.493 5.50686 94.8193 5.50686C83.162 5.50686 69.8014 3.85948 58.6409 6.7791" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/></svg>&nbsp;te maken?</span>
         .feedback__formWraper.row
-          p.col-12.col-xl-4 Het kost je één minuut om je voucher te claimen. En levert je een dag designpower op. Meld je aan via het formulier en wij plannen snel een intake met je.
-          form.feedback__form(action="/" method="post").col-12.col-xl-8.offset-xl-1
+          p.col-12.col-xl-8.col-xxl-6 Het kost je één minuut om je voucher te claimen. En levert je een dag designpower op. Meld je aan via het formulier en wij plannen snel een intake met je.
+          form.feedback__form(action="/" method="post").col-12.col-xl-4.col-xxl-6
             .row
               .col-12
                 input.input.full-width(type="text" name="name" placeholder="Naam*" required)
