--- a/src/scss/components-landing/feedback.scss
+++ b/src/scss/components-landing/feedback.scss
@@ -47,14 +47,20 @@
 
     .scribble svg {
       stroke: #F0091C;
-      transform: scale(1.2, 1.1) translate(2px, 0) rotate(4deg);
+      left: 0;
+      transform: scale(0.7, 0.7) translate(2px, 0) rotate(4deg);
+      width: 128px;
 
       @include tablet {
-        transform: scale(1.3, 0.9) translate(2px, 0) rotate(4deg);
+        left: 0;
+        transform: scale(0.7, 0.7) translate(2px, 0) rotate(4deg);
+        width: 181px;
       }
 
       @include desktop {
         transform: scale(1) translate(-100px, 0) rotate(4deg);
+        width: auto;
+        left: auto;
       }
     }
   }
@@ -64,23 +70,42 @@
     line-height: 20px;
     text-align: center;
     margin-bottom: 47px;
-    line-height: 1.7;
+    line-height: 1.6;
+    letter-spacing: -0.3px;
+    max-width: 400px;
+    margin-inline: auto;
 
     @include tablet {
+      line-height: 1.7;
       font-size: 20px;
       max-width: 600px;
       margin: -6px auto 86px;
+      letter-spacing: normal;
     }
 
-    @include desktop {
+    @media (min-width: 1200px) {
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: 64px;
+      text-align: left;
+    }
+
+    @media (min-width: 1400px) {
       text-align: left;
       max-width: 245px;
       margin: -6px 0 0 0;
+      margin-left: auto;
+      margin-right: 0;
     }
   }
 
   &__form {
     margin-bottom: 156px;
+
+    @media (min-width: 1400px) {
+      max-width: 600px;
+      margin-left: 100px;
+    }
 
     @include desktop {
       margin-bottom: 117px;
@@ -144,6 +169,10 @@
     }
   }
 
+  .textarea {
+    min-height: 78px;
+  }
+
   .button {
     font-family: $font-secondary;
     width: auto;
@@ -166,7 +195,7 @@
 .feedback__form {
   z-index: 2;
 
-  @media (min-width: 768px) and (orientation: landscape) {
+  @media (min-width: 768px) and (max-width: 1200px) and (orientation: landscape) {
     max-width: 70%;
     margin-left: auto;
   }
