--- a/src/scss/components-landing/header.scss
+++ b/src/scss/components-landing/header.scss
@@ -148,6 +148,9 @@ $mobile-menu-background-color: $color-primary;
       flex-direction: row;
       justify-content: space-between;
       align-items: flex-start;
+      max-width: 1640px;
+      padding-right: 140px;
+      padding-left: 140px;
     }
   }
 }
