--- a/src/scss/components-landing/button-gradient.scss
+++ b/src/scss/components-landing/button-gradient.scss
@@ -8,6 +8,9 @@
   border: none;
   width: 100%;
   text-decoration: none;
+  background: linear-gradient(90.00deg, rgba(240, 9, 28, 1), rgba(240, 9, 28, 1) 100%);
+  box-shadow: 0px 0px 30px 0px transparent;
+  transition-duration: 0.5s;
 
   &:focus,
   &:hover,
